--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,11 +57,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="190" id="Dpv-oK-gOa" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="190"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="Dpv-oK-gOa" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="24.5" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dpv-oK-gOa" id="PYt-4f-4m9">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tmi-A3-u1H">
@@ -80,17 +80,27 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAo-gu-Q8J">
-                                            <rect key="frame" x="118" y="33" width="276" height="146"/>
+                                            <rect key="frame" x="118" y="33" width="276" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQS-e3-eTJ" userLabel="favButton">
+                                            <rect key="frame" x="354" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="CbO-Mc-msi"/>
+                                                <constraint firstAttribute="width" constant="30" id="JBU-hk-M9z"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Tmi-A3-u1H" firstAttribute="leading" secondItem="PYt-4f-4m9" secondAttribute="leadingMargin" id="6I6-iC-viO"/>
                                         <constraint firstItem="5fo-bd-LeS" firstAttribute="leading" secondItem="Tmi-A3-u1H" secondAttribute="trailing" constant="8" id="6s4-Rk-5rE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="MQS-e3-eTJ" secondAttribute="trailing" constant="10" id="Dax-OE-vT8"/>
                                         <constraint firstItem="Tmi-A3-u1H" firstAttribute="top" secondItem="PYt-4f-4m9" secondAttribute="topMargin" id="FeR-iS-FKU"/>
-                                        <constraint firstItem="UAo-gu-Q8J" firstAttribute="bottom" secondItem="PYt-4f-4m9" secondAttribute="bottomMargin" id="Qha-8X-yJI"/>
+                                        <constraint firstItem="MQS-e3-eTJ" firstAttribute="top" secondItem="UAo-gu-Q8J" secondAttribute="bottom" constant="51.5" id="WBA-cP-tbG"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="MQS-e3-eTJ" secondAttribute="bottom" constant="10" id="YEh-t3-0PG"/>
                                         <constraint firstItem="5fo-bd-LeS" firstAttribute="top" secondItem="PYt-4f-4m9" secondAttribute="topMargin" id="dNk-MG-Viw"/>
                                         <constraint firstItem="UAo-gu-Q8J" firstAttribute="leading" secondItem="Tmi-A3-u1H" secondAttribute="trailing" constant="8" id="gBB-Mm-OOk"/>
                                         <constraint firstItem="UAo-gu-Q8J" firstAttribute="trailing" secondItem="PYt-4f-4m9" secondAttribute="trailingMargin" id="jBc-08-lLs"/>
@@ -116,11 +126,66 @@
                                 <action selector="onLogout:" destination="F7u-et-hB1" id="tJR-1s-1a2"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Z2A-TW-uTd">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="M1G-py-leL" kind="presentation" id="k6Y-75-owP"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fyc-hK-ggG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1734.7826086956522" y="-287.27678571428572"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="mhN-xq-gxX">
+            <objects>
+                <viewController id="CQo-Ez-YZH" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nM7-MA-jK6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BNJ-iJ-UGb">
+                                <rect key="frame" x="0.0" y="81" width="414" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="ttI-Dt-v16"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fjr-JT-qBg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BNJ-iJ-UGb" firstAttribute="leading" secondItem="fjr-JT-qBg" secondAttribute="leading" id="7IX-L3-xTn"/>
+                            <constraint firstItem="BNJ-iJ-UGb" firstAttribute="top" secondItem="fjr-JT-qBg" secondAttribute="top" constant="25" id="AWX-Ik-NEE"/>
+                            <constraint firstItem="fjr-JT-qBg" firstAttribute="trailing" secondItem="BNJ-iJ-UGb" secondAttribute="trailing" id="dAw-2h-gc3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="b82-Z3-9i1">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="97L-px-RGE">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="CQo-Ez-YZH" id="kmw-uw-XrY"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="0Kz-ef-ZsI">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="CQo-Ez-YZH" id="gt0-DJ-Jug"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="BNJ-iJ-UGb" id="7ms-KP-gHg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="By4-5W-aRV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3481.1594202898555" y="-286.60714285714283"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gWq-O8-HkT">
@@ -143,8 +208,31 @@
             </objects>
             <point key="canvasLocation" x="875" y="-287"/>
         </scene>
+        <!--Tweet Navigation Controller -->
+        <scene sceneID="HwR-g8-3Iy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M1G-py-leL" userLabel="Tweet Navigation Controller " sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jij-XL-Box">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.3367956252" green="0.59268697100000001" blue="0.88440595349999995" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="CQo-Ez-YZH" kind="relationship" relationship="rootViewController" id="LbL-nu-0Ki"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ov1-6Z-zFD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2569.5652173913045" y="-287.27678571428572"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
