--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAo-gu-Q8J">
-                                            <rect key="frame" x="118" y="33" width="276" height="14.5"/>
+                                            <rect key="frame" x="118" y="33" width="276" height="56"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -92,23 +92,41 @@
                                                 <constraint firstAttribute="width" constant="30" id="JBU-hk-M9z"/>
                                             </constraints>
                                             <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favTweet:" destination="Dpv-oK-gOa" eventType="touchUpInside" id="Gqd-5W-HRt"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIy-s1-iCM" userLabel="retweetButton">
+                                            <rect key="frame" x="309" y="99" width="35" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="35" id="0qi-gB-uiE"/>
+                                                <constraint firstAttribute="height" constant="30" id="Pdm-AW-obK"/>
+                                            </constraints>
+                                            <state key="normal" title=" " image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="Dpv-oK-gOa" eventType="touchUpInside" id="s6g-GI-wk0"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Tmi-A3-u1H" firstAttribute="leading" secondItem="PYt-4f-4m9" secondAttribute="leadingMargin" id="6I6-iC-viO"/>
                                         <constraint firstItem="5fo-bd-LeS" firstAttribute="leading" secondItem="Tmi-A3-u1H" secondAttribute="trailing" constant="8" id="6s4-Rk-5rE"/>
+                                        <constraint firstItem="MQS-e3-eTJ" firstAttribute="leading" secondItem="GIy-s1-iCM" secondAttribute="trailing" constant="10" id="AEB-ZG-rj7"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="MQS-e3-eTJ" secondAttribute="trailing" constant="10" id="Dax-OE-vT8"/>
                                         <constraint firstItem="Tmi-A3-u1H" firstAttribute="top" secondItem="PYt-4f-4m9" secondAttribute="topMargin" id="FeR-iS-FKU"/>
-                                        <constraint firstItem="MQS-e3-eTJ" firstAttribute="top" secondItem="UAo-gu-Q8J" secondAttribute="bottom" constant="51.5" id="WBA-cP-tbG"/>
+                                        <constraint firstItem="MQS-e3-eTJ" firstAttribute="top" secondItem="UAo-gu-Q8J" secondAttribute="bottom" constant="10" id="WBA-cP-tbG"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="MQS-e3-eTJ" secondAttribute="bottom" constant="10" id="YEh-t3-0PG"/>
                                         <constraint firstItem="5fo-bd-LeS" firstAttribute="top" secondItem="PYt-4f-4m9" secondAttribute="topMargin" id="dNk-MG-Viw"/>
                                         <constraint firstItem="UAo-gu-Q8J" firstAttribute="leading" secondItem="Tmi-A3-u1H" secondAttribute="trailing" constant="8" id="gBB-Mm-OOk"/>
                                         <constraint firstItem="UAo-gu-Q8J" firstAttribute="trailing" secondItem="PYt-4f-4m9" secondAttribute="trailingMargin" id="jBc-08-lLs"/>
                                         <constraint firstItem="UAo-gu-Q8J" firstAttribute="top" secondItem="5fo-bd-LeS" secondAttribute="bottom" constant="4" id="pNQ-pt-rQu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="GIy-s1-iCM" secondAttribute="bottom" constant="10" id="uc5-sa-vAB"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="MQS-e3-eTJ" id="9MH-Lu-jow"/>
                                     <outlet property="profileImageView" destination="Tmi-A3-u1H" id="dDH-vw-0WZ"/>
+                                    <outlet property="retweetButton" destination="GIy-s1-iCM" id="PYt-K1-TNf"/>
                                     <outlet property="tweetContentLabel" destination="UAo-gu-Q8J" id="zYU-M6-KOs"/>
                                     <outlet property="userNameLabel" destination="5fo-bd-LeS" id="c7V-Nq-vOb"/>
                                 </connections>
@@ -143,11 +161,11 @@
             <objects>
                 <viewController id="CQo-Ez-YZH" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nM7-MA-jK6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BNJ-iJ-UGb">
-                                <rect key="frame" x="0.0" y="81" width="414" height="128"/>
+                                <rect key="frame" x="0.0" y="113" width="414" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="ttI-Dt-v16"/>
@@ -211,10 +229,10 @@
         <!--Tweet Navigation Controller -->
         <scene sceneID="HwR-g8-3Iy">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M1G-py-leL" userLabel="Tweet Navigation Controller " sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="M1G-py-leL" userLabel="Tweet Navigation Controller " sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jij-XL-Box">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.3367956252" green="0.59268697100000001" blue="0.88440595349999995" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
@@ -230,6 +248,7 @@
     </scenes>
     <resources>
         <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
